--- a/src/references.bib
+++ b/src/references.bib
@@ -4,183 +4,185 @@
 % ================================================
 
 @article{anderson1990performance,
-  title = {The Performance of Spin Lock Alternatives for Shared-Memory Multiprocessors.},
-  author = {Anderson, Thomas E},
-  date = {1990},
+  title        = {The Performance of Spin Lock Alternatives for Shared-Memory Multiprocessors.},
+  author       = {Anderson, Thomas E},
+  date         = {1990},
   journaltitle = {IEEE Transactions on Parallel and Distributed Systems},
-  volume = {1},
-  number = {1},
-  pages = {6--16},
-  doi = {10.1109/71.80120}
+  volume       = {1},
+  number       = {1},
+  pages        = {6--16},
+  doi          = {10.1109/71.80120}
 }
 
-@book{arpaci-dusseauOperatingSystemsThree2018,
-  title = {Operating Systems: {{Three}} Easy Pieces},
-  author = {Arpaci-Dusseau, Remzi H and Arpaci-Dusseau, Andrea C},
-  date = {2018},
-  publisher = {Arpaci-Dusseau Books, LLC Madison, WI, USA}
+@book{ArpaciDusseau23-Book,
+  author    = {Remzi H. Arpaci-Dusseau and Andrea C. Arpaci-Dusseau},
+  title     = {{Operating Systems: Three Easy Pieces}},
+  publisher = {Arpaci-Dusseau Books},
+  month     = {November},
+  year      = {2023},
+  edition   = {1.10}
 }
 
 @article{birrell1984implementing,
-  title = {Implementing Remote Procedure Calls},
-  author = {Birrell, Andrew D and Nelson, Bruce Jay},
-  date = {1984},
+  title        = {Implementing Remote Procedure Calls},
+  author       = {Birrell, Andrew D and Nelson, Bruce Jay},
+  date         = {1984},
   journaltitle = {ACM Transactions on Computer Systems (TOCS)},
-  volume = {2},
-  number = {1},
-  pages = {39--59},
-  publisher = {ACM New York, NY, USA},
-  doi = {10.1145/2080.357392}
+  volume       = {2},
+  number       = {1},
+  pages        = {39--59},
+  publisher    = {ACM New York, NY, USA},
+  doi          = {10.1145/2080.357392}
 }
 
 @article{birrell1989introduction,
-  title = {An Introduction to Programming with Threads},
+  title  = {An Introduction to Programming with Threads},
   author = {Birrell, Andrew D},
-  date = {1989}
+  date   = {1989}
 }
 
 @book{bryant2011computer,
-  title = {Computer Systems: A Programmer’s Perspective},
-  author = {Bryant, Randal E and O’Hallaron, David Richard},
-  date = {2011},
+  title     = {Computer Systems: A Programmer's Perspective},
+  author    = {Bryant, Randal E and O'Hallaron, David Richard},
+  date      = {2011},
   publisher = {Prentice Hall}
 }
 
 @inproceedings{eykholt1992beyond,
-  title = {Beyond Multiprocessing: {{Multithreading}} the {{SunOS}} Kernel.},
+  title     = {Beyond Multiprocessing: {{Multithreading}} the {{SunOS}} Kernel.},
   booktitle = {{{USENIX}} Summer},
-  author = {Eykholt, Joseph R and Kleiman, Steve R and Barton, Steve and Faulkner, Roger and Shivalingiah, Anil and Smith, Mark and Voll, Jim and Weeks, Mary and Williams, Dock},
-  date = {1992},
-  volume = {92},
-  pages = {11--18},
+  author    = {Eykholt, Joseph R and Kleiman, Steve R and Barton, Steve and Faulkner, Roger and Shivalingiah, Anil and Smith, Mark and Voll, Jim and Weeks, Mary and Williams, Dock},
+  date      = {1992},
+  volume    = {92},
+  pages     = {11--18},
   publisher = {Citeseer}
 }
 
 @inproceedings{fedorova2004chip,
-  title = {Chip Multithreading Systems Need a New Operating System Scheduler},
+  title     = {Chip Multithreading Systems Need a New Operating System Scheduler},
   booktitle = {Proceedings of the 11th Workshop on {{ACM SIGOPS}} European Workshop},
-  author = {Fedorova, Alexandra and Small, Christopher and Nussbaum, Daniel and Seltzer, Margo},
-  date = {2004},
-  pages = {9--es},
-  doi = {10.1145/1133572.1133597}
+  author    = {Fedorova, Alexandra and Small, Christopher and Nussbaum, Daniel and Seltzer, Margo},
+  date      = {2004},
+  pages     = {9--es},
+  doi       = {10.1145/1133572.1133597}
 }
 
 @misc{hallBeejsGuideInterprocess2024,
-  title = {Beej's {{Guide}} to {{Interprocess Communication}}},
-  author = {Hall, Brian “Beej Jorgensen”},
-  date = {2024},
-  url = {https://beej.us/guide/bgipc/html/split/},
+  title   = {Beej's {{Guide}} to {{Interprocess Communication}}},
+  author  = {Hall, Brian "Beej Jorgensen"},
+  date    = {2024},
+  url     = {https://beej.us/guide/bgipc/html/split/},
   urldate = {2025-06-08},
-  file = {/Users/tylercrosse/Zotero/storage/ED3AKN2Y/split.html}
+  file    = {/Users/tylercrosse/Zotero/storage/ED3AKN2Y/split.html}
 }
 
 @book{hallBeejsGuideNetwork2019,
-  title = {Beej's {{Guide}} to {{Network Programming}}: {{Using Internet Sockets}}},
+  title      = {Beej's {{Guide}} to {{Network Programming}}: {{Using Internet Sockets}}},
   shorttitle = {Beej's {{Guide}} to {{Network Programming}}},
-  author = {Hall, Brian "Beej Jorgensen"},
-  date = {2019},
-  publisher = {Independently published},
-  location = {S.l.},
-  abstract = {Back in the mid 90s, Beej got tired of all his friends asking him how to do this stuff with networking programming in C, so he put pen to paper on the early World Wide Web and wrote down everything he knew just to get them off his back. Since then, the Guide has expanded significantly, with plenty of examples, and covers IPv6. Inside you'll find such diverse topics as: Sockets programming in the C programming language, client/server, IPv4 and IPv6, data encoding, lots of manual pages rewritten in a friendlier format with examples, and goats! Actually no goats, but goats will be with you in spirit! Beej's Guide to Network Programming is also freely available for PDF download online in US Letter and A4 sizes, in its entirety, and always will be--https://beej.us/guide/bgnet/ . The bound version here is provided as a service to those who still prefer the analog printed word. (And to those who want to kick back a few bucks to the author.)},
-  isbn = {978-1-7053-0990-2},
-  langid = {english},
-  pagetotal = {180}
+  author     = {Hall, Brian "Beej Jorgensen"},
+  date       = {2019},
+  publisher  = {Independently published},
+  location   = {S.l.},
+  abstract   = {Back in the mid 90s, Beej got tired of all his friends asking him how to do this stuff with networking programming in C, so he put pen to paper on the early World Wide Web and wrote down everything he knew just to get them off his back. Since then, the Guide has expanded significantly, with plenty of examples, and covers IPv6. Inside you'll find such diverse topics as: Sockets programming in the C programming language, client/server, IPv4 and IPv6, data encoding, lots of manual pages rewritten in a friendlier format with examples, and goats! Actually no goats, but goats will be with you in spirit! Beej's Guide to Network Programming is also freely available for PDF download online in US Letter and A4 sizes, in its entirety, and always will be--https://beej.us/guide/bgnet/ . The bound version here is provided as a service to those who still prefer the analog printed word. (And to those who want to kick back a few bucks to the author.)},
+  isbn       = {978-1-7053-0990-2},
+  langid     = {english},
+  pagetotal  = {180}
 }
 
 @misc{hallBeejsGuideNetwork2024,
-  title = {Beej's {{Guide}} to {{Network Concepts}}},
-  author = {Hall, Brian “Beej Jorgensen”},
-  date = {2024},
-  url = {https://beej.us/guide/bgnet0/html/split/},
+  title   = {Beej's {{Guide}} to {{Network Concepts}}},
+  author  = {Hall, Brian "Beej Jorgensen"},
+  date    = {2024},
+  url     = {https://beej.us/guide/bgnet0/html/split/},
   urldate = {2025-06-08},
-  file = {/Users/tylercrosse/Zotero/storage/7WMT4QZ5/split.html}
+  file    = {/Users/tylercrosse/Zotero/storage/7WMT4QZ5/split.html}
 }
 
 @misc{hallBeejsGuideProgramming2024,
-  title = {Beej's {{Guide}} to {{C Programming}}},
-  author = {Hall, Brian “Beej Jorgensen”},
-  date = {2024},
-  url = {https://beej.us/guide/bgc/html/split/},
+  title   = {Beej's {{Guide}} to {{C Programming}}},
+  author  = {Hall, Brian "Beej Jorgensen"},
+  date    = {2024},
+  url     = {https://beej.us/guide/bgc/html/split/},
   urldate = {2025-06-08},
-  file = {/Users/tylercrosse/Zotero/storage/ZQ24Z5IZ/split.html}
+  file    = {/Users/tylercrosse/Zotero/storage/ZQ24Z5IZ/split.html}
 }
 
 @book{kernighan1988c,
-  title = {The {{C}} Programming Language},
-  author = {Kernighan, Brian W and Ritchie, Dennis M},
-  date = {1988},
+  title     = {The {{C}} Programming Language},
+  author    = {Kernighan, Brian W and Ritchie, Dennis M},
+  date      = {1988},
   publisher = {prentice-Hall}
 }
 
 @book{kerrisk2010linux,
-  title = {The {{Linux}} Programming Interface: A {{Linux}} and {{UNIX}} System Programming Handbook},
-  author = {Kerrisk, Michael},
-  date = {2010},
+  title     = {The {{Linux}} Programming Interface: A {{Linux}} and {{UNIX}} System Programming Handbook},
+  author    = {Kerrisk, Michael},
+  date      = {2010},
   publisher = {No Starch Press}
 }
 
 @article{nelson1988caching,
-  title = {Caching in the {{Sprite}} Network File System},
-  author = {Nelson, Michael N and Welch, Brent B and Ousterhout, John K},
-  date = {1988},
+  title        = {Caching in the {{Sprite}} Network File System},
+  author       = {Nelson, Michael N and Welch, Brent B and Ousterhout, John K},
+  date         = {1988},
   journaltitle = {ACM Transactions on Computer Systems (TOCS)},
-  volume = {6},
-  number = {1},
-  pages = {134--154},
-  publisher = {ACM New York, NY, USA},
-  doi = {10.1145/35037.42183}
+  volume       = {6},
+  number       = {1},
+  pages        = {134--154},
+  publisher    = {ACM New York, NY, USA},
+  doi          = {10.1145/35037.42183}
 }
 
 @inproceedings{pai1999flash,
-  title = {Flash: An Efficient and Portable Web Server.},
+  title     = {Flash: An Efficient and Portable Web Server.},
   booktitle = {{{USENIX}} Annual Technical Conference, General Track},
-  author = {Pai, Vivek S and Druschel, Peter and Zwaenepoel, Willy},
-  date = {1999},
-  pages = {199--212}
+  author    = {Pai, Vivek S and Druschel, Peter and Zwaenepoel, Willy},
+  date      = {1999},
+  pages     = {199--212}
 }
 
 @article{popek1974formal,
-  title = {Formal Requirements for Virtualizable Third Generation Architectures},
-  author = {Popek, Gerald J and Goldberg, Robert P},
-  date = {1974},
+  title        = {Formal Requirements for Virtualizable Third Generation Architectures},
+  author       = {Popek, Gerald J and Goldberg, Robert P},
+  date         = {1974},
   journaltitle = {Communications of the ACM},
-  volume = {17},
-  number = {7},
-  pages = {412--421},
-  publisher = {ACM New York, NY, USA},
-  doi = {10.1145/361011.361073}
+  volume       = {17},
+  number       = {7},
+  pages        = {412--421},
+  publisher    = {ACM New York, NY, USA},
+  doi          = {10.1145/361011.361073}
 }
 
 @article{protic1996distributed,
-  title = {Distributed Shared Memory: {{Concepts}} and Systems},
-  author = {Protic, Jelica and Tomasevic, Milo and Milutinovic, Veljko},
-  date = {1996},
+  title        = {Distributed Shared Memory: {{Concepts}} and Systems},
+  author       = {Protic, Jelica and Tomasevic, Milo and Milutinovic, Veljko},
+  date         = {1996},
   journaltitle = {IEEE Parallel \& Distributed Technology: Systems \& Applications},
-  volume = {4},
-  number = {2},
-  pages = {63--71},
-  publisher = {IEEE},
-  doi = {10.1109/88.494605}
+  volume       = {4},
+  number       = {2},
+  pages        = {63--71},
+  publisher    = {IEEE},
+  doi          = {10.1109/88.494605}
 }
 
 @article{rosenblum2005virtual,
-  title = {Virtual Machine Monitors: {{Current}} Technology and Future Trends},
-  author = {Rosenblum, Mendel and Garfinkel, Tal},
-  date = {2005},
+  title        = {Virtual Machine Monitors: {{Current}} Technology and Future Trends},
+  author       = {Rosenblum, Mendel and Garfinkel, Tal},
+  date         = {2005},
   journaltitle = {Computer},
-  volume = {38},
-  number = {5},
-  pages = {39--47},
-  publisher = {IEEE},
-  doi = {10.1109/MC.2005.176}
+  volume       = {38},
+  number       = {5},
+  pages        = {39--47},
+  publisher    = {IEEE},
+  doi          = {10.1109/MC.2005.176}
 }
 
 @inproceedings{stein1992implementing,
-  title = {Implementing Lightweight Threads.},
+  title     = {Implementing Lightweight Threads.},
   booktitle = {{{USENIX}} Summer},
-  author = {Stein, Dan and Shah, Devang},
-  date = {1992},
-  volume = {575}
+  author    = {Stein, Dan and Shah, Devang},
+  date      = {1992},
+  volume    = {575}
 }
 
 % ================================================
