Add reading time

--- a/src/content/blog/2022/exponential-backoff/index.mdx
+++ b/src/content/blog/2022/exponential-backoff/index.mdx
@@ -4,7 +4,7 @@ description: 'How to automaically retry requests and not blow stuff up'
 date: '2022-09-28'
 status: 'complete'
 type: 'article'
-tags: ['algorithms', 'typescript', 'node', 'short']
+tags: ['distributed-systems','algorithms', 'typescript', 'node', 'short']
 category: ['budding']
 media_subpath: '/ideas/exponential-backoff/'
 draft: false
