WIP on GIOS project 1 writeup

--- a/src/content/ideas/2025/gios-pr1/first-draft.mdx
+++ b/src/content/ideas/2025/gios-pr1/first-draft.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Concurrent File Server'
 description: 'Building a Scalable Multithreaded File Server in C: Lessons from a Graduate OS Course'
-date: '2025-01-28'
+date: '2025-06-16'
 status: 'in-progress'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming']
@@ -10,8 +10,8 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr1/"
 image:
-  path: "./affiche-moebius-arzak-mystere-montrouge.jpg"
-  alt: 'Affiche Moebius Arzak Mystere Montrouge by Jean Giraud'
+  path: "./moebius-pilot.webp"
+  alt: 'Moebius Pilot by Jean Giraud'
 ---
 
 
