--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Graduate Introduction to Operating Systems'
 description: 'What I Learned in Graduate Introduction to Operating Systems (GIOS) - A Retrospective'
-date: '2025-05-05'
-updated: '2025-06-05'
+date: '2025-06-15'
+# updated: '2025-06-15'
 status: 'in-progress'
 type: 'retro'
 tags: ['GIOS', 'operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems']
